# idphandson

./: .env.sh  Cargo.toml  README.md  check_token.sh  get_token.sh  start_infra.sh  token.json
backend/: Cargo.toml
backend/src/: app_state.rs  handlers.rs  main.rs
bff/: Cargo.toml  example_token_data.json
bff/src/: app_error.rs  app_state.rs  handlers.rs  handlers_scim.rs  main.rs  token.rs
frontend/: Cargo.toml  run.sh
frontend/src/: main.rs
infra/: check_token.sh  docker-compose.yml  example_certs.json  example_discovery_document.json  example_introspection_result.json  example_token.json  get_certs.sh  get_discovery_document.sh  get_token.sh  get_token_by_code.sh  introspect_token.sh  realm-export.json  refresh_token.sh  wso2_get_users_scim_example.json  wso2_provisioning_create_user_example.json
infra/wso2/: deployment.toml
shared/: Cargo.toml
shared/src/: bff_rest_dtos.rs  lib.rs  token.rs
