[package]
name = "bff"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = "0.8.1"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.7"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9.3.1"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
base64 = "0.22.1"
sha2 = "0.10.8"
